--- a/templates/index.html
+++ b/templates/index.html
@@ -11,6 +11,11 @@
     <title>Transferir archivos</title>
 </head>
 <body>
+    <header style="background-color: rgb(10, 247, 255);">
+        <p>
+            <img src="{{url_for('static', filename='imgs/descarga.png')}}">
+        </p>
+    </header>
     
 <div style="padding-top:20px;">
     <h1 style="text-align:center;">Transferir archivos</h1>
@@ -23,12 +28,17 @@
     <button class="btn btn-secondary ml-2">Enviar Archivos</button>
 </div>
 
+<!--<footer style="background-color: rgb(1, 161, 161); bottom: 0; position: absolute; width: 100%; height: 70px;">
+    <img src="{{url_for('static', filename='imgs/descarga.png')}}">
+</footer>-->
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
 <script src="../static/jquery-3.4.1.min.js"></script>
 <script src="../static/metro.min.js"></script>
 <script src="../static/stop_server.js"></script>
+
 
 
 </body>
