--- a/templates/recibir.html
+++ b/templates/recibir.html
@@ -1,76 +1,99 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="../static/metro-all.min.css">
     <link rel="stylesheet" href="../static/styles.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>Transferir archivos</title>
 </head>
+
 <body>
-    
-<div style="padding-top:20px;">
-    <h1 style="text-align:center;">Recibir archivos</h1>
-</div>
 
-<div class="d-flex justify-content-center" style="padding: 50px 0px 50px;">
-    
-  
-    {% if servidorEncendido == False %}
-            <form action = "http://localhost/encender-server" method = "post">
-                <button type="submit" class="btn btn-success mr-2">Encender Servidor</button>
-            </form>
-    {% else %}
-            <button type="submit" class="btn btn-success mr-2 disabled">Encender Servidor</button>
-    {% endif %}
-                
-    
+    <header style="background-color: rgb(10, 247, 255);">
+        <p>
+            <img src="{{url_for('static', filename='imgs/descarga.png')}}">
+        </p>
+    </header>
 
-    {% if servidorEncendido == True %}
-        <form action = "http://localhost/apagar-server" method = "post">
-            <button type="submit" class="btn btn-danger ml-2 ">Apagar Servidor</button>
-        </form>
-    {% else %}
-    
-        <button class="btn btn-danger ml-2 disabled">Apagar Servidor</button>
-    
-    {% endif %}
-   
-</div>
-
-<div style="padding: 0px 50px 50px;">
-    <div class="progress">
-        <div class="progress-bar" role="progressbar" style="width: 0%" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+    <div style="padding-top:20px; margin-top: 30px; ">
+        <h1 style="text-align:center; font-size: 100px; font-family:  font-weight-bold;">Recibir archivo</h1>
     </div>
-</div>
 
-<p> {{ ipServer }} </p> 
-<p id="status"> Status: {{ status }} </p>
+    <div style="padding: 70px 0px ;">
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-success">
+                recibir archivo
+            </button>
+        </div>
+    </div>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <div style="padding: 0px 50px 50px;">
+        <div class="progress">
+            <div id="progre" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
+                aria-valuemax="100">
+            </div>
+        </div>
+        <div class="d-flex justify-content-center">
+            <p id="progresNum">
+                {{progre}}%
+            </p>
+        </div>
+    </div>
+    
+    <p> {{ ipServer }} </p>
+    <p id="status"> Status: {{ status }} </p>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-<script type="text/javascript" charset="utf-8">
-    var socket = io();
-    socket.on('connect', function() {
-        console.log("conectado")
+    <!--<footer style="background-color: rgb(1, 161, 161); bottom: 0; position: absolute; width: 100%; height: 70px;">
+        <img src="{{url_for('static', filename='imgs/descarga.png')}}">
+    </footer>-->
 
-        socket.on("status",(e)=>{
-            console.log(e)
-            document.getElementById("status").innerHTML = "Status: " +e
-        })
-    });
-</script>
+    <style>
+        .progress-bar{
+            width: {{progre}}%;
+        }
+    </style>
 
-<script src="../static/jquery-3.4.1.min.js"></script>
-<script src="../static/metro.min.js"></script>
-<script src="../static/stop_server.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js"
+        integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js"
+        integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13"
+        crossorigin="anonymous"></script>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js"
+        integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA=="
+        crossorigin="anonymous"></script>
+    <script type="text/javascript" charset="utf-8">
+        var socket = io();
+        socket.on('connect', function () {
+            console.log("conectado")
+
+            socket.on("status", (e) => {
+                console.log(e)
+                document.getElementById("status").innerHTML = "Status: " + e
+            })
+
+            socket.on("progre", (e) => {
+                console.log(e)
+                document.getElementById("progre").style.width = e
+                document.getElementById("progresNum").innerHTML = e
+            })
+        });
+    </script>
+
+    <script src="../static/jquery-3.4.1.min.js"></script>
+    <script src="../static/metro.min.js"></script>
+    <script src="../static/stop_server.js"></script>
 
 </body>
+
 </html>
