--- a/templates/enviar.html
+++ b/templates/enviar.html
@@ -27,11 +27,11 @@
     </div>
     
     <div class="my-5">
-        <input class="form-control" type="file" id="formFile">
+        <input class="form-control" type="file" id="inputFile">
     </div>
     
     <div class="d-flex justify-content-center" >
-        <button class="btn btn-success">
+        <button onclick="enviar()" class="btn btn-success">
             enviar
         </button>
     </div> 
@@ -65,6 +65,9 @@
             document.getElementById("status").innerHTML = "Status: " +e
         })
     });
+    function enviar(){
+        socket.emit("newFile",document.getElementById("inputFile").value)
+    }
 </script>
 
 <script src="../static/jquery-3.4.1.min.js"></script>
