--- a/templates/index.html
+++ b/templates/index.html
@@ -25,7 +25,9 @@
     <a href="/recibir">
         <button class="btn btn-primary mr-2">Recibir Archivos</button>
     </a>
-    <button class="btn btn-secondary ml-2">Enviar Archivos</button>
+    <a href="/enviar">
+        <button class="btn btn-secondary ml-2">Enviar Archivos</button>
+    </a>
 </div>
 
 <!--<footer style="background-color: rgb(1, 161, 161); bottom: 0; position: absolute; width: 100%; height: 70px;">
