--- a/templates/enviar.html
+++ b/templates/enviar.html
@@ -46,6 +46,14 @@
 
 <p id="status"> Status: {{ status }} </p>
 
+<div style="padding: 30px 0px;">
+    <div class="d-flex justify-content-center">
+        <a href="/index">
+            <button class="btn btn-success">atras</button>
+        </a>
+    </div>
+</div>
+
 <!--<footer style="background-color: rgb(1, 161, 161); bottom: 0; position: absolute; width: 100%; height: 70px;">
     <img src="{{url_for('static', filename='imgs/descarga.png')}}">
 </footer>-->
