--- a/templates/recibir.html
+++ b/templates/recibir.html
@@ -22,7 +22,7 @@
     </header>
 
     <div style="padding-top:20px; margin-top: 30px; ">
-        <h1 style="text-align:center; font-size: 100px; font-family:  font-weight-bold;">Recibir archivo</h1>
+        <h1 style="text-align:center; font-size: 70px; font-family:  font-weight-bold;">Recibir archivo</h1>
     </div>
 
     <div style="padding: 70px 0px ;">
@@ -33,7 +33,7 @@
         </div>
     </div>
 
-    <div style="padding: 0px 50px 50px;">
+    <div style="padding: 15px 50px 50px;">
         <div class="progress">
             <div id="progre" class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0"
                 aria-valuemax="100">
@@ -48,6 +48,14 @@
     
     <p> {{ ipServer }} </p>
     <p id="status"> Status: {{ status }} </p>
+
+    <div style="padding: 30px 0px;">
+        <div class="d-flex justify-content-center">
+            <a href="/index">
+                <button class="btn btn-success">atras</button>
+            </a>
+        </div>
+    </div>
 
     <!--<footer style="background-color: rgb(1, 161, 161); bottom: 0; position: absolute; width: 100%; height: 70px;">
         <img src="{{url_for('static', filename='imgs/descarga.png')}}">
